<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#48d1cc"
    android:baselineAligned="false"
    android:orientation="vertical"
    tools:context=".BmiActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/bubblegum_sans"
        android:text="BMI CALCULATOR"
        android:textColor="#000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvHeight"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height"
        android:layout_marginTop="50dp"
        android:textColor="#000"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/etHeight"
        android:layout_width="152dp"
        android:background="@drawable/btn_bg"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="15dp"
        android:layout_margin="20dp"
        android:inputType="numberDecimal|number"
        android:padding="12dp"
        android:verticalScrollbarPosition="left" />

    <TextView
        android:id="@+id/tvWeight"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/weight"
        android:textColor="#000"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/etWeight"
        android:layout_width="152dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="15dp"
        android:inputType="numberDecimal|number"
        android:background="@drawable/btn_bg"
        android:padding="12dp"
        android:verticalScrollbarPosition="left"
        />

    <Button
        android:id="@+id/btnRes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/RESULT"
        android:onClick="Result"
        android:textColor="#000"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/tvRes"
        android:layout_width="241dp"
        android:layout_height="133dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="15dp"
        android:padding="12dp"
        android:textAlignment="center"
        android:textSize="25dp" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="152dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="-30dp"
        android:text="BACK" />


</LinearLayout>